--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
-	"name": "minext",
-	"description": "MINEXT: A Minimal Next.js Template",
-	"version": "1.0.0",
+	"name": "next-react-minimal",
+	"version": "0.1.0",
 	"private": true,
 	"type": "module",
 	"scripts": {
@@ -9,15 +8,14 @@
 		"build": "next build"
 	},
 	"dependencies": {
-		"next": "^14.2.9",
+		"next": "15.0.1",
 		"react": "^18.3.1",
 		"react-dom": "^18.3.1"
 	},
 	"devDependencies": {
-		"@types/node": "^22.5.4",
-		"@types/react": "^18.3.5",
-		"@types/react-dom": "^18.3.0",
-		"typescript": "^5.6.2"
-	},
-	"packageManager": "pnpm@9.9.0+sha512.60c18acd138bff695d339be6ad13f7e936eea6745660d4cc4a776d5247c540d0edee1a563695c183a66eb917ef88f2b4feb1fc25f32a7adcadc7aaf3438e99c1"
+		"@types/node": "^22.8.0",
+		"@types/react": "^18.3.12",
+		"@types/react-dom": "^18.3.1",
+		"typescript": "5.6.3"
+	}
 }
