--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,11 +7,16 @@
 		"moduleDetection": "force",
 		"module": "preserve",
 		"paths": {
+			"@/*": ["./cluster/*"],
+			"$/*": ["./addons/*"],
+			"#/*": ["./public/*"],
 			"~/*": ["./src/*"]
 		},
 		"resolveJsonModule": true,
 		"allowJs": true,
 		"strict": true,
+		"strictNullChecks": false,
+		"noImplicitAny": false,
 		"noImplicitOverride": true,
 		"noUncheckedIndexedAccess": true,
 		"noEmit": true,
@@ -28,10 +33,26 @@
 	},
 	"include": [
 		".next/types/**/*.ts",
+		"addons/**/*.ts",
+		"addons/**/*.tsx",
+		"cluster/**/*.ts",
+		"cluster/**/*.tsx",
+		"drizzle.config.ts",
+		"eslint.config.js",
 		"next.config.js",
 		"next-env.d.ts",
+		"reliverse.addons.ts",
+		"reliverse.config.ts",
+		"reliverse.info.ts",
+		"reliverse.setup.ts",
+		"reliverse.themes.ts",
+		"remotion.config.ts",
+		"reset.d.ts",
 		"src/**/*.ts",
-		"src/**/*.tsx"
+		"src/**/*.tsx",
+		"src/env.js",
+		"postcss.config.js",
+		"tailwind.config.ts"
 	],
 	"exclude": ["node_modules"]
 }
